--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -6,8 +6,9 @@ body {
 
 .signupDataBox {
   display: grid;
+  grid-gap: 15px;
   grid-template-columns: 1fr 3fr;
-  grid-template-rows: repeat(5, 40px);
+  grid-template-rows: repeat(5);
   font-size: 13px;
   text-transform: uppercase;
   font-weight: 600;
