feat: [socketNewRoom] 메인페이지 프론트 작성

--- a/public/css/main.style.css
+++ b/public/css/main.style.css
@@ -4,3 +4,10 @@
     top: 50%;
     transform: translate(-50%, -50%);
 }
+
+/* #signup {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+} */
