--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,10 +39,11 @@ body {
 #chat-messages {
   /* overflow-y: auto; */
   padding-left: 10px; /* 왼쪽 여백 설정 */
+  padding-right: 10px;
   flex: 2; /* 플렉스 설정 */
   box-sizing: border-box; /* 상자 모델 설정 */
   overflow-y: auto; /* 세로 스크롤바 표시 */
-  background-color: #ffdddd; /* 배경색 설정 */
+  background-color: #fed7ca; /* 배경색 설정 */
   /* width: 100%; */
   height: calc(100% - 30px); /* 부모 노드의 높이에서 30px를 뺀 값 */
 }
@@ -108,7 +109,7 @@ body {
       color: #fff;
     } */
 #form {
-  background: rgba(0, 0, 0, 0.15); /* 배경색 설정 */
+  background: #f5eee6; /* 배경색 설정 */
   padding: 0.25rem; /* 안쪽 여백 설정 */
   position: fixed; /* 고정 위치로 설정 */
   bottom: 0; /* 하단 위치 설정 */
@@ -117,7 +118,6 @@ body {
   display: flex; /* 플렉스 박스로 설정 */
   height: 3rem; /* 높이 설정 */
   box-sizing: border-box; /* 상자 모델 설정 */
-  backdrop-filter: blur(10px); /* 배경 흐림 효과 설정 */
 }
 #input {
   flex: 1; /* 플렉스 설정 */
@@ -131,7 +131,7 @@ body {
   outline: none; /* 포커스 효과 제거 */
 }
 #form > button {
-  background: #333; /* 배경색 설정 */
+  background: #807b76; /* 배경색 설정 */
   border: none; /* 테두리 제거 */
   padding: 0 1rem; /* 안쪽 여백 설정 */
   margin: 0.25rem; /* 바깥 여백 설정 */
@@ -141,6 +141,7 @@ body {
 }
 
 #user-list-container {
+  background-color: #fff8e3;
   min-width: 150px; /* 최소 너비 설정 */
   /* background-color: #007bff; */
   height: 100%; /* 높이 설정 */
@@ -163,4 +164,20 @@ body {
 
 .form-select {
   width: 115px; /* 너비 설정 */
+}
+
+.messageUserName {
+  margin-top: 5px;
+  font-size: small;
+}
+
+.messageText {
+  display: inline-block;
+  word-break: break-all;
+  height: auto;
+  max-width: 60%;
+  padding-left: 7px;
+  padding-right: 7px;
+  background-color: #ffffff;
+  border-radius: 10px;
 }
