--- a/public/css/main.style.css
+++ b/public/css/main.style.css
@@ -1,13 +1,30 @@
-#match {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+body {
+  max-width: 540px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-/* #signup {
-    position: absolute;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-} */
+.btn {
+  font-family: sans-serif;
+  font-size: xx-large;
+  font-weight: 700;
+  color: #807b76;
+  outline-color: #e6a4b4;
+  outline-style: solid;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 20%;
+  margin-right: 20%;
+  width: 60%;
+  aspect-ratio: 162/100;
+  min-width: 162px;
+  min-height: 100px;
+  border-radius: 15px;
+  background-color: #fff8e3;
+  border: none;
+}
+
+.btn:active {
+  background-color: #f3d7ca;
+}
