--- a/public/css/signin.css
+++ b/public/css/signin.css
@@ -1,4 +1,5 @@
 body {
+  max-width: 540px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -22,7 +23,7 @@ body {
   width: 80%;
   height: auto;
   border-radius: 15px;
-  background-color: #fff;
+  background-color: #fff8e3;
   border: solid 2px #e6a4b4;
 }
 
