--- a/public/css/admin.signin.css
+++ b/public/css/admin.signin.css
@@ -1,9 +1,3 @@
-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .signinDataBox {
   display: grid;
   grid-template-columns: 1fr 3fr;
@@ -17,6 +11,8 @@ body {
 .signinBox {
   margin-top: 25px;
   margin-bottom: 25px;
+  margin-left: 5%;
+  margin-right: 5%;
   padding: 25px;
   width: 80%;
   height: auto;
