--- a/public/css/signin.css
+++ b/public/css/signin.css
@@ -1,10 +1,3 @@
-body {
-  max-width: 540px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .signinDataBox {
   display: grid;
   grid-gap: 15px;
@@ -19,6 +12,8 @@ body {
 .signinBox {
   margin-top: 25px;
   margin-bottom: 25px;
+  margin-left: 5%;
+  margin-right: 5%;
   padding: 25px;
   width: 80%;
   height: auto;
