--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,40 +1,20 @@
-body {
-  font-family: 'Arial', sans-serif; /* 폰트 패밀리 설정 */
-  margin: 0; /* 바깥 여백 제거 */
-  padding: 0; /* 안쪽 여백 제거 */
-  display: flex; /* 플렉스 박스로 설정 */
-  height: 100vh; /* 뷰포트 높이로 설정 */
-  flex-direction: column; /* 세로 방향으로 정렬 */
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-    Arial, sans-serif; /* 폰트 패밀리 설정 */
-}
-
 #chat-container {
-  min-width: 500px; /* 최소 너비 설정 */
-  position: fixed; /* 고정 위치로 설정 */
-  top: 50%; /* 상단 위치 설정 */
-  left: 50%; /* 좌측 위치 설정 */
-  transform: translate(-50%, -50%); /* 가운데 정렬 */
-  display: flex; /* 플렉스 박스로 설정 */
-  /* overflow: hidden; */
-  flex-direction: row; /* 가로 방향으로 정렬 */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 80vh 50px;
   justify-content: center; /* 가로로 가운데 정렬 */
-  align-items: center; /* 세로로 가운데 정렬 */
-  height: 80%; /* 높이 설정 */
-  width: 60%; /* 너비 설정 */
-  border: 2px solid #ddd; /* 테두리 스타일 및 색상 설정 */
-  /* border-radius: 10px;  */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* 그림자 추가 */
+  align-items: stretch; /* 세로로 가운데 정렬 */
+  height: 75vh; /* 높이 설정 */
+  width: 80%; /* 너비 설정 */
 }
 
 #chat-messages-container {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
   /* background-color: #007bff; */
-  padding-bottom: 20px;
   height: 100%; /* 높이 설정 */
-  width: 60%; /* 너비 설정 */
-  min-width: 350px; /* 최소 너비 설정 */
+  width: 100%; /* 너비 설정 */
   /* padding: 20px; */
-  box-sizing: border-box; /* 상자 모델 설정 */
 }
 
 #chat-messages {
@@ -42,11 +22,14 @@ body {
   padding-left: 10px; /* 왼쪽 여백 설정 */
   padding-right: 10px;
   flex: 2; /* 플렉스 설정 */
-  box-sizing: border-box; /* 상자 모델 설정 */
   overflow-y: auto; /* 세로 스크롤바 표시 */
   background-color: #fed7ca; /* 배경색 설정 */
   /* width: 100%; */
-  height: calc(100% - 30px); /* 부모 노드의 높이에서 30px를 뺀 값 */
+  height: 100%;
+}
+
+#chat-messages::-webkit-scrollbar {
+  display: none;
 }
 
 /* #chat-messages > li {
@@ -87,7 +70,6 @@ body {
   align-items: center; /* 세로 가운데 정렬 */
   /* padding: 10px; */
   /* margin: 5px; */
-  box-sizing: border-box; /* 상자 모델 설정 */
   background-color: #f2f2f2; /* 배경색 설정 */
   bottom: 0; /* 하단 위치 설정 */
 }
@@ -110,21 +92,20 @@ body {
       color: #fff;
     } */
 #form {
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
   background: #f5eee6; /* 배경색 설정 */
   padding: 0.25rem; /* 안쪽 여백 설정 */
-  position: fixed; /* 고정 위치로 설정 */
   bottom: 0; /* 하단 위치 설정 */
   left: 0; /* 좌측 위치 설정 */
   right: 0; /* 우측 위치 설정 */
-  display: flex; /* 플렉스 박스로 설정 */
-  height: 3rem; /* 높이 설정 */
-  box-sizing: border-box; /* 상자 모델 설정 */
+  display: grid;
+  grid-template-columns: 115px minmax(20px, 1fr) 80px;
+  height: 50px; /* 높이 설정 */
 }
 #input {
-  flex: 1; /* 플렉스 설정 */
   border: none; /* 테두리 제거 */
   padding: 0 1rem; /* 안쪽 여백 설정 */
-  flex-grow: 1; /* 자동 확장 설정 */
   border-radius: 2rem; /* 테두리 반경 설정 */
   margin: 0.25rem; /* 바깥 여백 설정 */
 }
@@ -142,14 +123,15 @@ body {
 }
 
 #user-list-container {
+  visibility: hidden;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
   background-color: #fff8e3;
-  min-width: 150px; /* 최소 너비 설정 */
   /* background-color: #007bff; */
   height: 100%; /* 높이 설정 */
-  width: 40%; /* 너비 설정 */
+  width: 100%; /* 너비 설정 */
   /* min-width: 400px; */
   /* padding: 20px; */
-  box-sizing: border-box;
 }
 
 #user-list-top {
@@ -159,8 +141,12 @@ body {
   justify-content: center; /* 가로 가운데 정렬 */
 }
 #user-list {
-  height: calc(100% - 40px); /* 높이 계산 */
+  height: 90%; /* 높이 계산 */
   overflow-y: auto; /* 세로 스크롤바 표시 */
+}
+
+#user-list::-webkit-scrollbar {
+  display: none;
 }
 
 .form-select {
